<resources>
    <string name="app_name">City</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_drinks"><![CDATA[Food & Drinks]]></string>
    <string name="_5_upto_20_discount">5% upto 20% Discount</string>
    <string name="offer_to_get_new_car">Offer to get new car</string>
    <string name="avalible_in">Avalible in</string>
    <string name="all_details">All Details</string>
    <string name="buy">Buy</string>
</resources>
