<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/white">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <ImageView
            android:id="@+id/image_offer"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/car2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/offer_title"
            android:layout_marginStart="8dp"
            android:text="@string/offer_to_get_new_car"
            android:textSize="25dp"
            app:layout_constraintTop_toBottomOf="@+id/image_offer"
             />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_love"
            app:layout_constraintTop_toBottomOf="@+id/image_offer"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/offer_details"
            android:layout_margin="5dp"
            android:text="@string/_5_upto_20_discount"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@+id/offer_title"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Location"
            android:src="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/offer_details"
            android:background="@color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/avalible_in"
            android:text="@string/avalible_in"
            app:layout_constraintStart_toEndOf="@id/Location"
            app:layout_constraintTop_toTopOf="@id/Location"
            app:layout_constraintBottom_toBottomOf="@id/Location"
            />
        <Button
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:id="@+id/cairo_button"
            android:background="@drawable/rounded_button"
            android:text="cairo"
            app:layout_constraintStart_toEndOf="@id/avalible_in"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@+id/offer_details"
            />
        <Button
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:id="@+id/Alex_button"
            android:background="@drawable/rounded_button"
            android:text="Alex"
            app:layout_constraintStart_toEndOf="@id/cairo_button"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/offer_details"
            />

        <Button
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:id="@+id/Hurghada_button"
            android:background="@drawable/rounded_button"
            android:text="Hurghada"
            app:layout_constraintStart_toEndOf="@id/Alex_button"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/offer_details"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="QR"
            android:id="@+id/QR"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Location"
            android:layout_marginStart="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/first_price"
            android:text="2000$"
            app:layout_constraintStart_toEndOf="@id/QR"
            app:layout_constraintTop_toBottomOf="@id/Location"
            android:layout_marginStart="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Second_price"
            android:text="1800$"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/first_price"
            app:layout_constraintTop_toBottomOf="@id/Location"
            android:layout_marginStart="5dp"
            />
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="@drawable/rounded_colored_button"
            android:id="@+id/BuyButton"
            app:layout_constraintStart_toEndOf="@id/Second_price"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@id/Location"
            android:layout_marginTop="3dp"
            />
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/all_details"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="@drawable/rounded_colored_button"
            android:id="@+id/DetailsButton"
            app:layout_constraintStart_toEndOf="@id/BuyButton"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toBottomOf="@id/Location"
            android:layout_marginTop="3dp"
            />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>